# WageGap-Frontend

./: .gitignore  README.md  app.js  env.template  generateGraphs.js  generatetext.js  index.html  interactive-proposal.md  interactive.html  nonserver_interactive.html  package-lock.json  package.json  pyproject.toml
css/: elegant-aero.css  interactive-style.css
data/: quants_avg_by_race_23_all copy.csv  quants_avg_by_race_23_all_copy.json
milestones/: interactive-draft.md
public/: generateGraphs.js  index.html  interactive.html  nonserver_interactive.html  package.json  server_interactive.html
public/css/: interactive-style.css
python-analysis/: clean_wages_df.py  finalViz.ipynb
src/: clean_wages_df.py  finalViz.ipynb
